Updates from Overleaf

--- a/Porposal/proposal.tex
+++ b/Porposal/proposal.tex
@@ -63,7 +63,7 @@ Bei der Konfiguration des ersten Knoten/Clients wird dieser als Broker festgeleg
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1\linewidth]{Porposal/bild1.jpg}
+    \includegraphics[width=1\linewidth]{Porposal/Bilder/bild1.jpg}
     \caption{Der erste Client wird Broker und erstellt die IP-Tabelle}
     \label{fig:statemachine}
 \end{figure}
@@ -72,7 +72,7 @@ Der zweite und alle weiteren Clients melden sich beim Broker an und bekommen die
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1\linewidth]{Porposal/bild2.jpg}
+    \includegraphics[width=1\linewidth]{Porposal/Bilder/bild2.jpg}
     \caption{Der zweite Client meldet sich beim Broker an und bekommt die aktuelle IP-Tabelle.}
     \label{fig:statemachine}
 \end{figure}
@@ -80,13 +80,13 @@ Der zweite und alle weiteren Clients melden sich beim Broker an und bekommen die
 Der Broker hat außerdem die Aufgabe, alle Daten der Clients zu sammeln und diese kurzen Abständen in einem Cloudspeicher zu hinterlegen. 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1\linewidth]{Porposal/Bild3.jpg}
+    \includegraphics[width=1\linewidth]{Porposal/Bilder/Bild3.jpg}
     \caption{Der dritte Client meldet sich beim Broker an und bekommt die aktuelle IP-Tabelle.}
     \label{fig:statemachine}
 \end{figure}
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1\linewidth]{Porposal/Bild4.jpg}
+    \includegraphics[width=1\linewidth]{Porposal/Bilder/Bild4.jpg}
     \caption{Der Broker verliert die Verbindung und ein neuer Broker wird bestimmt. }
     \label{fig:statemachine}
 \end{figure}
@@ -95,7 +95,7 @@ Sobald der abgestürzte Client/Broker die Verbindung wieder aufbauen konnte, erh
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1\linewidth]{Porposal/Bild5.jpg}
+    \includegraphics[width=1\linewidth]{Porposal/Bilder/Bild5.jpg}
     \caption{Der ehemalige Broker ist jetzt Client}
     \label{fig:statemachine}
 \end{figure}
